cmake_minimum_required (VERSION 3.28)

project(Game)

set(
    INCLUDE
    Detour/Include/DetourAlloc.h
    Detour/Include/DetourAssert.h
    Detour/Include/DetourCommon.h
    Detour/Include/DetourMath.h
    Detour/Include/DetourNavMesh.h
    Detour/Include/DetourNavMeshBuilder.h
    Detour/Include/DetourNavMeshQuery.h
    Detour/Include/DetourNode.h
    Detour/Include/DetourStatus.h
	include/ani_input.h
	include/ani_node.h
	include/mu_animationsmanager.h
	include/mu_bboxrenderer.h
	include/mu_camera.h
	include/mu_capabilities.h
	include/mu_charactersmanager.h
	include/mu_config.h
	include/mu_controllerstate.h
	include/mu_crypt.h
	include/mu_entity_light.h
	include/mu_entity.h
	include/mu_environment_characters.h
	include/mu_environment_controller.h
	include/mu_environment_joints.h
	include/mu_environment_objects.h
	include/mu_environment_particles.h
	include/mu_environment.h
	include/mu_graphics.h
	include/mu_input.h
	include/mu_math_aabb.h
	include/mu_math_obb.h
	include/mu_model_mesh.h
	include/mu_math.h
	include/mu_model_skeleton.h
	include/mu_model.h
	include/mu_modelrenderer.h
	include/mu_navigation.h
	include/mu_physics.h
	include/mu_precompiled.h
	include/mu_rendererconfig.h
	include/mu_renderstate.h
	include/mu_resizablequeue.h
	include/mu_resources.h
	include/mu_resourcesmanager.h
	include/mu_root.h
	include/mu_skeletoninstance.h
	include/mu_skeletonmanager.h
	include/mu_state.h
	include/mu_terrain.h
	include/mu_textureattachments.h
	include/mu_textures.h
	include/mu_threadsmanager.h
	include/mu_timer.h
	include/mu_version.h
	include/mu_window.h
	include/nav_path.h
	include/nav_polys.h
	include/res_item.h
	include/res_items.h
	include/res_render.h
	include/res_renders.h
	include/t_character_structs.h
	include/t_charactersmanager_structs.h
	include/t_graphics_buffer.h
	include/t_graphics_immutables.h
	include/t_graphics_layouts.h
	include/t_graphics_pipelineresources.h
	include/t_graphics_pipelines.h
	include/t_graphics_pipelinestate.h
	include/t_graphics_renderclassifier.h
	include/t_graphics_rendermanager.h
	include/t_graphics_rendersettings.h
	include/t_graphics_resourceid.h
	include/t_graphics_resources.h
	include/t_graphics_samplers.h
	include/t_graphics_shader.h
	include/t_graphics_shaderresources.h
	include/t_graphics_shadows.h
	include/t_graphics_texture.h
	include/t_graphics.h
	include/t_joint_base.h
	include/t_joint_config.h
	include/t_joint_create.h
	include/t_joint_entity.h
	include/t_joint_enum.h
	include/t_joint_render.h
	include/t_joint_tails.h
	include/t_joint_thunder01_v7.h
	include/t_model_enums.h
	include/t_object_structs.h
	include/t_particle_base.h
	include/t_particle_blueblur_v0.h
	include/t_particle_blueblur_v1.h
	include/t_particle_bubble_v0.h
	include/t_particle_create.h
	include/t_particle_config.h
	include/t_particle_effect_v0.h
	include/t_particle_effect_v1.h
	include/t_particle_effect_v2.h
	include/t_particle_effect_v3.h
	include/t_particle_effect_v4.h
	include/t_particle_effect_v5.h
	include/t_particle_effect_v6.h
	include/t_particle_effect_v7.h
	include/t_particle_entity.h
	include/t_particle_enum.h
	include/t_particle_flare02_v0.h
	include/t_particle_flareblue_v0.h
	include/t_particle_flareblue_v1.h
	include/t_particle_flower01_v0.h
	include/t_particle_flower01_v1.h
	include/t_particle_flower02_v0.h
	include/t_particle_flower02_v1.h
	include/t_particle_flower03_v0.h
	include/t_particle_flower03_v1.h
	include/t_particle_macros.h
	include/t_particle_render.h
	include/t_particle_smoke01_v0.h
	include/t_particle_smoke05_v0.h
	include/t_particle_smoke05_v1.h
	include/t_particle_truefire_red_v5.h
	include/t_terrain_consts.h
	include/t_terrain_cullingtree.h
	include/t_terrain_structs.h
	include/t_textureattachments.h
	include/t_threading_helper.h
	include/ui_noesisgui_consts.h
	include/ui_noesisgui_fontprovider.h
	include/ui_noesisgui_renderdevice.h
	include/ui_noesisgui_rendertarget.h
	include/ui_noesisgui_sdl.h
	include/ui_noesisgui_stream.h
	include/ui_noesisgui_texture.h
	include/ui_noesisgui_textureprovider.h
	include/ui_noesisgui_xamlprovider.h
	include/ui_noesisgui.h
)

set(
    SOURCE
    Detour/Source/DetourAlloc.cpp
    Detour/Source/DetourAssert.cpp
    Detour/Source/DetourCommon.cpp
    Detour/Source/DetourNavMesh.cpp
    Detour/Source/DetourNavMeshBuilder.cpp
    Detour/Source/DetourNavMeshQuery.cpp
    Detour/Source/DetourNode.cpp
	src/mu_animationsmanager.cpp
	src/mu_bboxrenderer.cpp
	src/mu_camera.cpp
	src/mu_capabilities.cpp
	src/mu_charactersmanager.cpp
	src/mu_config.cpp
	src/mu_controllerstate.cpp
	src/mu_crypt.cpp
	src/mu_entity.cpp
	src/mu_environment_characters.cpp
	src/mu_environment_controller.cpp
	src/mu_environment_joints.cpp
	src/mu_environment_objects.cpp
	src/mu_environment_particles.cpp
	src/mu_environment_terrain.cpp
	src/mu_environment.cpp
	src/mu_graphics.cpp
	src/mu_input.cpp
	src/mu_math_aabb.cpp
	src/mu_math_obb.cpp
	src/mu_model.cpp
	src/mu_modelrenderer.cpp
	src/mu_navigation.cpp
	src/mu_physics.cpp
	src/mu_renderstate.cpp
	src/mu_resourcesmanager.cpp
	src/mu_root.cpp
	src/mu_skeletoninstance.cpp
	src/mu_skeletonmanager.cpp
	src/mu_state.cpp
	src/mu_terrain.cpp
	src/mu_textureattachments.cpp
	src/mu_textures.cpp
	src/mu_threadsmanager.cpp
	src/mu_timer.cpp
	src/mu_window.cpp
	src/res_items.cpp
	src/res_renders.cpp
	src/t_character_move.cpp
	src/t_graphics_buffer.cpp
	src/t_graphics_immutables.cpp
	src/t_graphics_layouts.cpp
	src/t_graphics_pipelineresources.cpp
	src/t_graphics_pipelines.cpp
	src/t_graphics_pipelinestate.cpp
	src/t_graphics_renderclassifier.cpp
	src/t_graphics_rendermanager.cpp
	src/t_graphics_resourceid.cpp
	src/t_graphics_resources.cpp
	src/t_graphics_samplers.cpp
	src/t_graphics_shader.cpp
	src/t_graphics_shaderresources.cpp
	src/t_graphics_shadows.cpp
	src/t_graphics_texture.cpp
	src/t_graphics.cpp
	src/t_joint_base.cpp
	src/t_joint_thunder01_v7.cpp
	src/t_particle_base.cpp
	src/t_particle_blueblur_v0.cpp
	src/t_particle_blueblur_v1.cpp
	src/t_particle_bubble_v0.cpp
	src/t_particle_effect_v0.cpp
	src/t_particle_effect_v1.cpp
	src/t_particle_effect_v2.cpp
	src/t_particle_effect_v3.cpp
	src/t_particle_effect_v4.cpp
	src/t_particle_effect_v5.cpp
	src/t_particle_effect_v6.cpp
	src/t_particle_effect_v7.cpp
	src/t_particle_flare02_v0.cpp
	src/t_particle_flareblue_v0.cpp
	src/t_particle_flareblue_v1.cpp
	src/t_particle_flower01_v0.cpp
	src/t_particle_flower01_v1.cpp
	src/t_particle_flower02_v0.cpp
	src/t_particle_flower02_v1.cpp
	src/t_particle_flower03_v0.cpp
	src/t_particle_flower03_v1.cpp
	src/t_particle_smoke01_v0.cpp
	src/t_particle_smoke05_v0.cpp
	src/t_particle_smoke05_v1.cpp
	src/t_particle_truefire_red_v5.cpp
	src/t_terrain_cullingtree.cpp
	src/t_threading_helper.cpp
	src/ui_noesisgui_consts.cpp
	src/ui_noesisgui_fontprovider.cpp
	src/ui_noesisgui_renderdevice.cpp
	src/ui_noesisgui_rendertarget.cpp
	src/ui_noesisgui_sdl.cpp
	src/ui_noesisgui_stream.cpp
	src/ui_noesisgui_texture.cpp
	src/ui_noesisgui_textureprovider.cpp
	src/ui_noesisgui_xamlprovider.cpp
	src/ui_noesisgui.cpp
)

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
    add_definitions(-DWINVER=0x0601 -D_WIN32_WINNT=0x0601)
endif()

get_supported_backends(ENGINE_LIBRARIES)

set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
add_library(Game STATIC ${SOURCE} ${INCLUDE})
target_include_directories(Game PUBLIC include PRIVATE Detour/Include)
target_precompile_headers(Game PRIVATE include/mu_precompiled.h)
target_link_libraries(
    Game
    PUBLIC
        Shared
        FreeImage
        glm
        EnTT
        cryptopp
        DiligentFX
        Diligent-TargetPlatform
        Diligent-TextureLoader
        Diligent-Common
        Diligent-GraphicsTools
        ${ENGINE_LIBRARIES}
)

source_group("src" FILES ${SOURCE})
source_group("include" FILES ${INCLUDE})