sources += files(
    'Detour\Source\DetourAlloc.cpp',
    'Detour\Source\DetourAssert.cpp',
    'Detour\Source\DetourCommon.cpp',
    'Detour\Source\DetourNavMesh.cpp',
    'Detour\Source\DetourNavMeshBuilder.cpp',
    'Detour\Source\DetourNavMeshQuery.cpp',
    'Detour\Source\DetourNode.cpp',
	'mu_animationsmanager.cpp',
	'mu_bboxrenderer.cpp',
	'mu_camera.cpp',
	'mu_capabilities.cpp',
	'mu_charactersmanager.cpp',
	'mu_config.cpp',
	'mu_controllerstate.cpp',
	'mu_crypt.cpp',
	'mu_entity.cpp',
	'mu_environment_characters.cpp',
	'mu_environment_controller.cpp',
	'mu_environment_joints.cpp',
	'mu_environment_objects.cpp',
	'mu_environment_particles.cpp',
	'mu_environment_terrain.cpp',
	'mu_environment.cpp',
	'mu_graphics.cpp',
	'mu_input.cpp',
	'mu_math_aabb.cpp',
	'mu_math_obb.cpp',
	'mu_model.cpp',
	'mu_modelrenderer.cpp',
	'mu_navigation.cpp',
	'mu_physics.cpp',
	'mu_renderstate.cpp',
	'mu_resourcesmanager.cpp',
	'mu_root.cpp',
	'mu_skeletoninstance.cpp',
	'mu_skeletonmanager.cpp',
	'mu_state.cpp',
	'mu_terrain.cpp',
	'mu_textureattachments.cpp',
	'mu_textures.cpp',
	'mu_threadsmanager.cpp',
	'mu_timer.cpp',
	'mu_window.cpp',
	'res_items.cpp',
	'res_renders.cpp',
	't_character_move.cpp',
	't_graphics_buffer.cpp',
	't_graphics_immutables.cpp',
	't_graphics_layouts.cpp',
	't_graphics_pipelineresources.cpp',
	't_graphics_pipelines.cpp',
	't_graphics_pipelinestate.cpp',
	't_graphics_renderclassifier.cpp',
	't_graphics_rendermanager.cpp',
	't_graphics_resourceid.cpp',
	't_graphics_resources.cpp',
	't_graphics_samplers.cpp',
	't_graphics_shader.cpp',
	't_graphics_shaderresources.cpp',
	't_graphics_shadows.cpp',
	't_graphics_texture.cpp',
	't_graphics.cpp',
	't_joint_base.cpp',
	't_joint_thunder01_v7.cpp',
	't_particle_base.cpp',
	't_particle_blueblur_v0.cpp',
	't_particle_blueblur_v1.cpp',
	't_particle_bubble_v0.cpp',
	't_particle_effect_v0.cpp',
	't_particle_effect_v1.cpp',
	't_particle_effect_v2.cpp',
	't_particle_effect_v3.cpp',
	't_particle_effect_v4.cpp',
	't_particle_effect_v5.cpp',
	't_particle_effect_v6.cpp',
	't_particle_effect_v7.cpp',
	't_particle_flare02_v0.cpp',
	't_particle_flareblue_v0.cpp',
	't_particle_flareblue_v1.cpp',
	't_particle_flower01_v0.cpp',
	't_particle_flower01_v1.cpp',
	't_particle_flower02_v0.cpp',
	't_particle_flower02_v1.cpp',
	't_particle_flower03_v0.cpp',
	't_particle_flower03_v1.cpp',
	't_particle_smoke01_v0.cpp',
	't_particle_smoke05_v0.cpp',
	't_particle_smoke05_v1.cpp',
	't_particle_truefire_red_v5.cpp',
	't_terrain_cullingtree.cpp',
	't_threading_helper.cpp',
	'ui_noesisgui_consts.cpp',
	'ui_noesisgui_fontprovider.cpp',
	'ui_noesisgui_renderdevice.cpp',
	'ui_noesisgui_rendertarget.cpp',
	'ui_noesisgui_sdl.cpp',
	'ui_noesisgui_stream.cpp',
	'ui_noesisgui_texture.cpp',
	'ui_noesisgui_textureprovider.cpp',
	'ui_noesisgui_xamlprovider.cpp',
	'ui_noesisgui.cpp'
)
includes += include_directories('.')
includes += include_directories('Detour/Include')